--- a/desafio/d12/estilo/style.css
+++ b/desafio/d12/estilo/style.css
@@ -1,5 +1,14 @@
 @charset "UTF-8";
 /* o asterisco é configuração geral do stilo */
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+    --fonte1: Verdana, geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
 
 *{
     margin: 0px;
@@ -9,6 +18,7 @@
 html, body{
     min-height: 100vh; /* tamanho da altura da vio porti */
     background-color: darkgray;
+    font-family: var(--fonte1);
 }
 
 header{
@@ -21,6 +31,8 @@ header > h1 {
     padding-top: 50px;
    /* coloca todas as letras em maiuscula a configuração >> text-transform: uppercase; << */
    font-variant: small-caps; /* deixa a letras maiusculas porem com a primeira letra maior*/
+   font-family: var(--fonte2);
+   font-size: 10vw;
 }
 
 header > p {
@@ -42,6 +54,8 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
 }
 
 section.normal {
@@ -55,7 +69,8 @@ section.imagem {
 }
 
 section.imagem > p {
-    width: 400px;
+   display: inline-block;
+   padding: 5px;
     background-color: rgba(0, 0, 0, 0.267);
 }
 
