--- a/capitulo25/mq004/estilos/media-query.css
+++ b/capitulo25/mq004/estilos/media-query.css
@@ -1,4 +1,103 @@
 @charset "UTF-8";
 
-/*Todas as demais midias*/
+/*Todas as demais midias
+
+--------------------------------------------------
+Pesquisa por Typical Device Breakpoints
+tem para
+--------------------------------------------------
+pequenas telas até 600 px
+----------------------------
+celular vão de 600 px até 768 px
+----------------------------
+Tablet vão de 768 px até 992 px
+----------------------------
+Desktop vão de 992 px até 1200px
+---------------------------
+telas grandes acima de 1200px
+
+*/
+
+@media print {
+    /*impressão*/
+
+    body {
+        background-image: url(../imagens/back-print.jpg);/*desnecesário não imprime*/
+        }
+
+        * {
+            font-family: 'Courier New', Courier, monospace;
+        }
+        
+        main {
+            border: 2px solid black;
+        }
+        
+        main h1 {
+            text-shadow: none;
+            color: black;
+        }
+
+        main::after {
+            content: 'Essa impressão foi feita atraves do site www...';
+            width: 90% ;
+            text-decoration: overline;
+        }
+
+    img#phone{display: none; }
+    img#tablet{display: none;}
+    img#print{display: block;}
+    img#pc{display: none;}
+    img#tv{display: none;}
+
+
+}
+
+
+
+@media  screen and (min-width: 768px) and (max-width: 992px) {
+    /*Tablet*/
+    body {
+        background-image: url(../imagens/back-tablet.jpg);
+    }
+
+    img#phone{display: none; }
+    img#tablet{display: block;}
+    img#print{display: none;}
+    img#pc{display: none;}
+    img#tv{display: none;}
+
+    
+}
+
+@media screen and (min-width:992px) and (max-width:1200px) {
+    /*Desktop*/
+    body {
+        background-image: url(../imagens/back-pc.jpg);
+    }
+
+    img#phone{display: none; }
+    img#tablet{display: none;}
+    img#print{display: none;}
+    img#pc{display: block;}
+    img#tv{display: none;}
+}
+
+@media screen and (min-width:1200px) {
+    /*Telas gandes*/
+    body {
+        background-image: url(../imagens/back-tv.jpg);
+    }
+
+    main {
+        width: 700px;
+    }
+
+    img#phone{display: none; }
+    img#tablet{display: none;}
+    img#print{display: none;}
+    img#pc{display: none;}
+    img#tv{display: block;}
+    
+}
 
