--- a/capitulo25/mq005/estilos/style.css
+++ b/capitulo25/mq005/estilos/style.css
@@ -1,3 +1,65 @@
 @charset " UTF-8";
 
+* {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0px;
+    padding: 0px;
+}
+
+body, html {
+    background-color: lightgrey;
+}
+
+header {
+    background-color: gray;
+}
+
+header > h1 {
+    padding: 10px;
+    text-align: center;
+
+}
+
+menu {
+    display: block;
+}
+
+menu > ul {
+    list-style-type: none; /*esse codigo tira as bolinhas do menu*/ 
+}
+
+menu > ul > li > a {
+    display: block;
+    padding: 10px;
+    text-decoration: none;
+    text-align: center;
+    background-color: rgb(153, 151, 151);
+    color: white;
+    border-top: 2px solid gray;
+
+}
+
+menu > ul > li > a:hover {
+    background-color: gray;
+}
+
+main {
+    width: 90vw;
+    background-color: white;
+    margin: auto;
+    margin-top: 10px;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+article >h2 {
+    padding-bottom: 10px;
+}
+
+article > p {
+    text-align: justify; /*esse codigo justifica os paragrafos*/
+    margin-bottom: 20px; /*esse codigo da um espaço entre os paragrafos*/
+    text-indent: 20px; /* esse codigo coloca paragrafo*/
+}
+
 
